duicontrolpanel (0.11.2~unreleased) unstable; urgency=low

  [ Sandor Pinter ]
  * Fixes: NB#194151 - <coverity> defects from libdialerui/0.0.6.30_0m6

  [ Robert Manner ]
  * documentation fixes
  * Fixes: no exec right for duicontrolpanel on meego
  * Changes: new category "Events feed", accessible from Notifications

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 12 Jan 2011 16:37:13 +0100

duicontrolpanel (0.11.1) unstable; urgency=low

  * Changes: one line applet brief is top aligned
  * Changes: two new icon ids for mainpage
  * Fixes: NB#215724 - 'duicontrolpanel' package requests non-existing
    security token
  * New: Building docs,tests,translations can be disabled through
    DEB_BUILD_OPTIONS
  * Fixes: NB#211971 - meegotestrunner will be deprecated

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 05 Jan 2011 11:23:36 +0100

duicontrolpanel (0.11.0) unstable; urgency=low

  * Changes: applet categories became declarative (non-hardcoded)
  * Fixes: NB#208942 - If no settings panels open, opening the main
    settings screen scrambles

 -- Robert Manner <robert.manner@blumsoft.eu>  Mon, 20 Dec 2010 13:44:56 +0100

duicontrolpanel (0.10.0) unstable; urgency=low

  * Changes: runs most binary applets in separate process
  * Changes: removes meegotestrunner dependency from unit tests

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 14 Dec 2010 10:29:45 +0100

duicontrolpanel (0.9.9.1) unstable; urgency=low

  * Fixes: NB#205701 - Control panel does not launch to main view when
    started from launcher and it is already open
  * Updates icon ids to spec 0.7
  * New: Help button support for meego
  * New: meegotouch-controlpanel.pc symlink into pkconfig directory

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 21 Dec 2010 10:33:26 +0100

duicontrolpanel (0.9.8) unstable; urgency=low

  * Fixes: NB#210162 - Wrong logical ID & Icon on Sync & Backup on
    control panel maintranslations.cpp
